[package]
name = "cuda-rate-limit"
version = "0.1.0"
edition = "2021"
description = "Token bucket, sliding window, agent quotas, backpressure"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lucineer/cuda-rate-limit"
readme = "README.md"
keywords = ["ai", "fleet", "agent", "rust"]
categories = ["science"]

[dependencies]
serde = { version = "1", features = ["derive"] }
